
plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    // -- Tests --
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation("com.google.code.gson:gson:2.14.0")
    // ------------

    // -- Deploy --
    implementation("com.formdev:flatlaf:3.7.1")
    // ------------
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'net.jatoxo.emu.gui.GUI'
    applicationDefaultJvmArgs = [
            "--enable-native-access=ALL-UNNAMED"
    ]
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
